// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapsible list 1`] = `
<div
  className="css-zzd91j-CollapsibleWrapper exlpbrg0"
>
  <div
    className="Collapsible"
  >
    <span
      className="Collapsible__trigger is-closed"
      onClick={[Function]}
      onKeyPress={[Function]}
      style={null}
      tabIndex={null}
    >
      <div
        className="css-icu0je-StyledTrigger exlpbrg1"
      >
        My Customer has a retry status. What activity would they able to engage in while being in ‘retry’ status, as it relates to the Dwolla Platform?
        <img
          alt="Open collapsible content"
          className="css-bnfv21-ImageStyles"
          src="test-image-stub"
        />
      </div>
    </span>
    <div
      className="Collapsible__contentOuter"
      onTransitionEnd={[Function]}
      style={
        Object {
          "WebkitTransition": "height 200ms linear",
          "height": 0,
          "msTransition": "height 200ms linear",
          "overflow": "hidden",
          "transition": "height 200ms linear",
        }
      }
    >
      <div
        className="Collapsible__contentInner"
      >
        <ul
          className=" css-1i7ig5e-baseTextStyles-baseTextStyles-listStyles-listStyles-UnorderedList-UnorderedList"
        >
          <li>
            Send funds - No
          </li>
          <li>
            Send funds - No
          </li>
          <li>
            Receive funds - Yes - Note that funds will only process to their balance and the transfer will stay pending until the Customer has been verified.
          </li>
          <li>
            Add and verify a bank funding source - Yes
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapsible paragraph 1`] = `
<div
  className="css-zzd91j-CollapsibleWrapper exlpbrg0"
>
  <div
    className="Collapsible"
  >
    <span
      className="Collapsible__trigger is-closed"
      onClick={[Function]}
      onKeyPress={[Function]}
      style={null}
      tabIndex={null}
    >
      <div
        className="css-icu0je-StyledTrigger exlpbrg1"
      >
        My Customer has a document status. Can I submit more than one document via the API?
        <img
          alt="Open collapsible content"
          className="css-bnfv21-ImageStyles"
          src="test-image-stub"
        />
      </div>
    </span>
    <div
      className="Collapsible__contentOuter"
      onTransitionEnd={[Function]}
      style={
        Object {
          "WebkitTransition": "height 200ms linear",
          "height": 0,
          "msTransition": "height 200ms linear",
          "overflow": "hidden",
          "transition": "height 200ms linear",
        }
      }
    >
      <div
        className="Collapsible__contentInner"
      >
        <p
          className=" css-e1sksv-baseTextStyles-baseTextStyles-paragraphStyles-paragraphStyles"
        >
          Yes, although this is not necessary, nor recommended. Dwolla manually reviews all documents, so sending more documents than necessary may slow down the verification process for your Customers.
        </p>
      </div>
    </div>
  </div>
</div>
`;
